cancel frnd reqst endpoint
